--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>პრაქტიკა ლექცია5</title>
+
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
 	<h1>GEOLAB</h1>
