--- a/index.html
+++ b/index.html
@@ -3,14 +3,82 @@
 <head>
 	<title>პრაქტიკა ლექცია5</title>
 
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 <body>
-	<h1>GEOLAB</h1>
 
-	<p>gamarjoba</p>
 
+	<header>
+		<h1>თიბისი</h1>
+	</header>
+
+	<div id="first"></div>
+
+	<div id="second"></div>
+
+	<div id="test"></div>
+
+	<div id="large">
+		<div id="small"></div>
+		<h5 style="color: white;">text text text text text text</h5>
+		<div id="circle"></div>
+	</div>
+
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p id="main">KING</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+	<p>idk text idk</p>
+
+
+	<div class="contact">
+		<span>contact</span>
+	</div>
 
 </body>
 </html>
